Apply suggestions from code review
Prefer use of Collections.empty**()

Co-authored-by: Jan Cortiel <37823749+janoliver20@users.noreply.github.com>